# bunny-scheduler

./: .gitignore  README.md  manage.py  pyproject.toml
bunnyscheduler/: asgi.py  settings.py  urls.py  wsgi.py
scheduler/: admin.py  forms.py  models.py  urls.py  views.py
scheduler/migrations/: 0001_initial.py  0002_proposal_original_user.py
scheduler/templatetags/: proposal_extras.py
static/: output.css
templates/: base.html  index.html  login.html  register.html  reservation.html  reservations.html
templates/components/: calendar.html  my_proposals.html  proposals_received.html
