[project]
name = "bunny-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.2",
    "fastapi[standard]==0.128.0",
    "psycopg[binary,pool]==3.3.2",
    "whitenoise==6.11.0",
]

[tool.fastapi]
entrypoint = "bunnyscheduler.asgi:application"
